# volmount

./: .gitignore  Cargo.toml  volmountd.service
.trellis/spec/backend/: alloc-coverage.md  btree-cache-coverage.md  directory-structure.md  index.md  lock-concurrency.md  quality-guidelines.md  recovery-coverage.md  volume-coverage.md
.trellis/spec/guides/: bcachefs-alignment-guide.md  index.md
.trellis/spec/journal/: index.md  (+2 more)
crates/volmount/: Cargo.toml
crates/volmount-core/: Cargo.toml
crates/volmount-core/benches/: backend.rs
crates/volmount-core/src/: config.rs  lib.rs  types.rs
crates/volmount-core/src/alloc/: background.rs  btree.rs  bucket.rs  bucket_gens.rs  foreground.rs  mod.rs  open_bucket.rs  reservation.rs  write_point.rs
crates/volmount-core/src/block_device/: backend.rs  file.rs  mock.rs  mod.rs  s3.rs  sparse.rs
crates/volmount-core/src/btree/: btree.rs  bucket_io.rs  cache.rs  gc.rs  interior.rs  io.rs  iter.rs  key.rs  key_cache.rs  mod.rs  node.rs  node_scan.rs  op.rs  search.rs  transaction.rs  trigger.rs  types.rs  update.rs  write_buffer.rs  writeback.rs
crates/volmount-core/src/journal/: jset.rs  mod.rs  reclaim.rs  replay.rs  types.rs  validate.rs
crates/volmount-core/src/lock/: deadlock.rs  mod.rs  six.rs  wait_fifo.rs
crates/volmount-core/src/meta/: mod.rs  volume_meta.rs
crates/volmount-core/src/recovery/: mod.rs  overlay.rs
crates/volmount-core/src/recovery/passes/: accounting_read.rs  alloc_read.rs  btree_roots.rs  bucket_gens_init.rs  check_alloc_info.rs  check_allocations.rs  check_snapshots.rs  check_topology.rs  fs_freespace_init.rs  fs_journal_alloc.rs  journal_read.rs  journal_replay.rs  lookup_root_inode.rs  mod.rs  presplit_shard_boundaries.rs  set_may_go_rw.rs  snapshots_read.rs  trans_mark_dev_sbs.rs
crates/volmount-core/src/snap/: meta.rs  mod.rs  snapshot.rs  table.rs
crates/volmount-core/src/storage/: block_io.rs  mod.rs  service.rs  superblock.rs
crates/volmount-core/src/subvol/: mod.rs  ops.rs  types.rs
crates/volmount-core/src/volume/: mod.rs
crates/volmount-core/tests/: storage.rs
crates/volmount-nbd/: Cargo.toml
crates/volmount/src/: cli.rs  config.rs  daemon_cmd.rs  http_client.rs  inspect_cmd.rs  main.rs  nbd_cmd.rs  snap_cmd.rs  subvol_cmd.rs  vol_cmd.rs
crates/volmount/tests/: cli.rs
crates/volmountd/: Cargo.toml
crates/volmountd/src/: config.rs  main.rs  server.rs  volume.rs
crates/volmountd/tests/: functional.rs  integration.rs
examples/: btree_debug.rs
scripts/: bench-fio.sh  install-systemd.sh
(+163 files in other folders)
