[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["volmount contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
crc = "3"
parking_lot = "0.12"
tracing = "0.1"
thiserror = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing-subscriber = "0.3"
bytes = "1"
dirs-next = "2"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
ureq = { version = "2.9", features = ["json"] }
libc = "0.2"
