[package]
name = "volmount-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
crc.workspace = true
parking_lot.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
aws-sdk-s3 = "1"
aws-config = "1"
libc = "0.2"
urcu = "0.0.4"
dirs-next.workspace = true
rand = "0.8"
spin = "0.9"
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
criterion = { version = "0.5", features = ["async_futures"] }

[[bench]]
name = "backend"
harness = false
