[package]
name = "volmount"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ureq.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
dirs-next.workspace = true
volmount-core = { path = "../volmount-core" }

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
ureq.workspace = true
