[package]
name = "volmountd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tower-http.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
dirs-next.workspace = true
serde = { workspace = true, features = ["derive"] }
libc.workspace = true
volmount-core = { path = "../volmount-core" }
volmount-nbd = { path = "../volmount-nbd" }

[dev-dependencies]
tempfile = "3"
ureq.workspace = true
